<resources>
    <string name="app_name">EvaluacionT1_DAHA_1</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_consult">Consultar</string>
    <string name="introducir_resultado">Introducir Resultado</string>
    <string name="et_date_hour">Introduce la fecha dd/mm/yyyy hhmi</string>
    <string name="et_group_phase">Introduce la fase de grupos, Octavos, Cuartos, Semifinales</string>
    <string name="select_team">Seleccionar</string>
    <string name="et_select_team2">Selecciona el equipo 2</string>
    <string name="et_goals_team1">Goles del equipo 1</string>
    <string name="separator">-</string>
    <string name="et_goals_team2">Goles del equipo 2</string>
    <string name="btn_clear">Limpiar datos</string>
    <string name="btn_save_result">Guardar Resultados</string>
    <string name="et_select_team1">Selecciona el equipo 1</string>
    <string name="tv_consulta_resultados">"Consultar resultados pais "</string>
    <string name="et_introducir_pais">Introduce el pais</string>
    <string name="tv_seleccion_equipo">Seleccion de equipo</string>
    <string name="btn_germany">Alemania</string>
    <string name="qatar_logo">qatar_logo</string>
    <string name="hint_introduce">Introduce el país seleccionado</string>
    <string name="btn_cancel">cancelar</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_saudiArabia">Arabia Saudí</string>
    <string name="btn_argentina">Argentina</string>
    <string name="btn_australia">Australia</string>
    <string name="btn_belgium">Bélgica</string>
    <string name="btn_brazil">Brasil</string>
    <string name="btn_cameroon">Camerún</string>
    <string name="btn_canada">Canadá</string>
    <string name="btn_korea">Corea del Sur</string>
    <string name="btn_costaRica">Costa Rica</string>
    <string name="btn_croatia">Croacia</string>
    <string name="btn_denmark">Dinamarca</string>
    <string name="btn_ecuador">Ecuador</string>
    <string name="btn_spain">España</string>
    <string name="btn_usa">Estados Unidos</string>
    <string name="btn_france">Francia</string>
    <string name="btn_wales">Gales</string>
    <string name="btn_ghana">Ghana</string>
    <string name="btn_netherlands">Holanda</string>
    <string name="btn_england">Inglaterra</string>
    <string name="btn_iran">Irán</string>
    <string name="btn_japan">Japón</string>
    <string name="btn_morroco">Marruecos</string>
    <string name="btn_mexico">México</string>
    <string name="btn_poland">Polonia</string>
    <string name="btn_portugal">Portugal</string>
    <string name="btn_qatar">Qatar</string>
    <string name="btn_senegal">Senegal</string>
    <string name="btn_serbia">Serbia</string>
    <string name="btn_switzerland">Suiza</string>
    <string name="btn_tunisia">Tunisia</string>
    <string name="btn_urugay">Uruguay</string>
    <string name="btn_blank" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_phrase">phrase</string>
    <string name="frag_team1">Team1</string>
    <string name="frag_team2">Team2</string>
    <string name="frag_date">date</string>
    <string name="frag_goals_team1">goalsT1</string>
    <string name="frag_goals_team2">goalsT2</string>
    <string name="frag_goals1">Goals1</string>
    <string name="frag_goals2">Goals2</string>
</resources>