<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/global_padding"
    tools:context=".ConsultarResultados">

    <TextView
        android:id="@+id/tv_consulta_resultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/tv_consulta_resultados"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_select_team1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_consulta_resultados"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_team1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/et_introducir_pais">
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_color"
            android:layout_marginStart="10dp"
            android:text="@string/select_team">
        </Button>

    </LinearLayout>

</RelativeLayout>